--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main-login">
         <div class="left-login"> 
-            <h1>         Faça login <br>e entre para nosso time</h1>
+            <h1> FAÇA LOGIN E ENTRE <br> PARA O NOSSO TIME!</h1>
             <img src="hallowen1.svg" class="left-login-image" alt="Animação">
         </div>
         <div class="right-login">
